--- a/css/main.css
+++ b/css/main.css
@@ -9,16 +9,35 @@
   margin: 4px 10px;
 }
 
-.transparent-background {
-  background: rgba(0, 0, 0, 0.4);
-  padding: 10px !important;
-  width: 100%;
-  text-align: center;
+.sh {
+  text-shadow: 0px 4px 5px #000;
 }
 
-.white-background {
-  background: rgba(255, 255, 255, 0.4);
-  padding: 10px !important;
-  /*width: 100%;*/
-  /*text-align: center;*/
+.bg {
+  padding: 5px;
+  background: rgba(0, 0, 0, 0.4)
+}
+
+.pad-top-1 {
+  padding-top: 10px;
+}
+
+.pad-top-2 {
+  padding-top: 30px;
+}
+
+.pad-top-3 {
+  padding-top: 60px;
+}
+
+.pad-bot-1 {
+  padding-bottom: 10px;
+}
+
+.pad-bot-2 {
+  padding-bottom: 30px;
+}
+  
+.pad-bot-3 {
+  padding-bottom: 60px;
 }
